--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
-          token: ${{ secrets.METRICS_KEY }}
+          token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
           user: Undercity1914
